--- a/xplorelagos/core/templates/Select-culinary.html
+++ b/xplorelagos/core/templates/Select-culinary.html
@@ -170,7 +170,7 @@
             activitiesInput.setAttribute('type', 'hidden');
             activitiesInput.setAttribute('name', 'selected_activities');
             activitiesInput.setAttribute('value', JSON.stringify(selectedActivities));
-            document.getElementById("adventureForm").appendChild(activitiesInput);
+            document.getElementById("culinaryForm").appendChild(activitiesInput);
     
             this.submit();
         });
