--- a/xplorelagos/core/templates/SignUp.html
+++ b/xplorelagos/core/templates/SignUp.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a class="ab2" href="{% url 'home'%}">Home</a></li>
         <li><a class="ab2" href="{% url 'about_us'%}">About us</a></li>
-        <li><a class="ab2" href="{% url 'sign_up'%}">Sign in</a></li>
+        <li><a class="ab2" href="{% url 'login'%}">Sign in</a></li>
       </ul>
     </div>
   </div>
